# 3dprint

./: .gitignore  CMakeLists.txt  Constants.h  Facet.cpp  Facet.h  Filler.cpp  Filler.h  Filler2VTK.cpp  Filler2VTK.h  InputFromSTL.cpp  InputFromSTL.h  Layer.h  Layers2VTK.cpp  Layers2VTK.h  OptimizedModel.cpp  OptimizedModel.h  Point.cpp  Point.h  Polygon.h  STL2VTK.cpp  STL2VTK.h  Segment.h  Slicer.cpp  Slicer.h  main.cpp
examples/: Eight.stl  Happy.stl  Sphere.stl  Torus.stl  bunny_out.stl
